<resources>
    <string name="app_name">MyFirstApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LVOnStart">List View Fragment OnStart</string>
    <string name="LVOnCreate">List View Fragment OnCreateView</string>
    <string name="TextOnStart">Text Fragment OnStart</string>
    <string name="TextOnCreate">Text Fragment OnCreateView</string>
    <string name="AIActivity">AIActivity</string>
    <string name="oncreate" translatable="false">onCreate</string>
    <string name="onstart" translatable="false">onStart</string>
    <string name="onstop" translatable="false">onStop</string>
    <string name="ondestroy" translatable="false">onDestroy</string>
    <string name="vractivity">VRActivity</string>
    <string name="on_start_execute">On start Execute</string>
    <string name="on_resume_execute">On resume Execute</string>
    <string name="on_create_execute">On create Execute</string>
    <string name="main_activity">Main_activity</string>
    <string name="VRActivity">VRActivity</string>
    <string name="veera_gudla_lab_01" translatable="false">Veera Gudla Lab 01</string>
</resources>